@@ -3252,6 +3252,7 @@
 			  <property name="active">False</property>
 			  <property name="inconsistent">False</property>
 			  <property name="draw_indicator">True</property>
+			  <property name="tooltip">This option may dramaticly increase run time</property>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
